--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "mdb-react-ui-kit": "^4.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.5.0",
     "react-burger-menu": "^3.0.8",
     "react-dom": "^18.2.0",
     "react-icons": "^4.4.0",
